Fix Lighthouse contrast issues: darken body, navbar tagline, and button text to improve accessibility compliance

--- a/src/components/Button/Button.scss
+++ b/src/components/Button/Button.scss
@@ -15,7 +15,7 @@
 /* Primary */
 .button-primary {
   background-color: #C8A96A;
-  color: #fff;
+  color: #111111;
 
   &:hover {
     background-color: #b89555;
