--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -47,7 +47,7 @@
 
 .navbar__tagline {
   font-size: 13px;
-  color: #777777;
+  color: #5f5f5f;
 }
 
 .navbar__nav {
