--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -65,7 +65,7 @@ body {
   font-family: $font-body;
   font-size: 16px;
   line-height: 1.6;
-  color: #555555;
+  color: #444444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -97,12 +97,12 @@ h3 {
 
 p {
   font-size: 16px;
-  color: #555555;
+  color: #444444;
   margin: 0;
 }
 
 .text-muted {
-  color: #888888;
+  color: #666666;
 }
 
 .text-center {
